// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VList.ts should render a dense component and match snapshot 1`] = `
<div class="v-sheet theme--light v-list--dense v-list"
     role="list"
>
</div>
`;

exports[`VList.ts should render a subheader component and match snapshot 1`] = `
<div class="v-sheet theme--light v-list--subheader v-list"
     role="list"
>
</div>
`;

exports[`VList.ts should render a threeLine component and match snapshot 1`] = `
<div class="v-sheet theme--light v-list--three-line v-list"
     role="list"
>
</div>
`;

exports[`VList.ts should render a twoLine component and match snapshot 1`] = `
<div class="v-sheet theme--light v-list--two-line v-list"
     role="list"
>
</div>
`;

exports[`VList.ts should render component and match snapshot 1`] = `
<div class="v-sheet theme--light v-list"
     role="list"
>
</div>
`;
